# mlb

./: .gitignore  MLB_FULL_STACK_ENGINE_README.md  WORKING_STATE.md  build_mlb_daily_bet_card.py  build_mlb_live_projections.py  build_mlb_weather.py  mlb_live_unabated.py  pyproject.toml  run_mlb_live_board.py  run_mlb_unabated_nightly.py
archive/freeze_2026-04-14_164719/artifacts/: draftkings full stack best edges.csv  draftkings full stack projected player props.csv  (+7 more)
artifacts/: draftkings full stack projected game lines.csv  mlb_live_game_board.csv  mlb_live_market_family_summary.csv  mlb_live_score_status_summary.csv  mlb_live_team_board.csv
data/curated/: actual game results.parquet  actual pitcher stats by game.parquet  latest team form.parquet  player and team volatility.parquet
data/raw/: fanduel_sample.json  fanduel_synthetic.json
fixtures/: fd_event_pages_fixture.json  projection_fixture.csv
mlb_betting_data/data/: retrosheet_parser.py
mlb_betting_data/models/: history_trained_models.py
mlb_betting_data/pipelines/: compare_books.py
mlb_betting_data/sportsbooks/: draftkings.py  fanduel.py
mlb_betting_workbench.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mlb_live_market_layer_package/: __init__.py  mlb_live_pricing.py  mlb_live_schema.py
mlb_live_market_layer_package/fixtures/: dk_raw_fixture.json
models/history_trained/: game game total runs.joblib  history trained model summary.csv  pitcher hits allowed.joblib  pitcher home runs allowed.joblib  pitcher walks allowed.joblib
tests/: test_live_market_layer.py
(+68 files in other folders)
