[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlb-betting-workbench"
version = "1.1.5"
description = "Plain-English MLB betting package with Retrosheet, DraftKings, FanDuel, archives, and fixed multi-book comparison"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "pyarrow>=14.0",
  "requests>=2.31",
  "beautifulsoup4>=4.12",
  "scikit-learn>=1.3",
  "joblib>=1.3",
  "numpy>=1.26",
]

[project.optional-dependencies]
browser = [
  "playwright>=1.40",
]

[tool.setuptools.packages.find]
include = ["mlb_betting_data*"]
